[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "analysis>=0.1.7",
    "data>=0.4",
    "finta>=1.3",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "psycopg2-binary>=2.9.10",
    "pytz>=2025.2",
    "reportlab>=4.4.2",
    "reports>=0.4.1",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "streamlit>=1.47.0",
    "ta>=0.11.0",
    "tensorflow==2.14.0",
    "visualization>=1.0.0",
    "xgboost>=3.0.2",
    "yfinance>=0.2.65",
]
